test/sema/ambiguous-init-call-with-overloaded-params.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo: Copyable {
    init(int a) { }
    init(int b) { }
}

void main() {
    // CHECK: [[@LINE+6]]:9: error: ambiguous reference to 'Foo.init'
    // CHECK: 4:5: note: candidate function:
    // CHECK-NEXT: init(int a) { }
    // CHECK: 5:5: note: candidate function:
    // CHECK-NEXT: init(int b) { }
    // CHECK-NOT: note
    _ = Foo(1)
}
